# ground_no2_prediction

./: LICENSE  Makefile  Possible models.md  README.md  indirect_outcome_approach.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
scripts/: optuna_hyperparameter.py  optuna_hyperparameter_catboost.py  optuna_hyperparameter_lgbm.py  processing_data.py  saving_script.py
